[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/TileMap/EmptyTileMap/EmptyWaterTileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/TileMap/EmptyTileMap/TextureRect_Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/TileMap/EmptyTileMap/EmptyObjectsTileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/TileMap/EmptyTileMap/EmptyAnimatedRockTileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/InteractableObjects/Doug.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/TileMap/EmptyTileMap/EmptyFenceTileMap.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/TileMap/EmptyTileMap/EmptyGroundTileMap.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/TileMap/EmptyTileMap/EmptyDecorationsTileMap.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/Sea.gd" type="Script" id=10]
[ext_resource path="res://salamisound-4195836-small-quiet-waves-rippling.mp3" type="AudioStream" id=11]
[ext_resource path="res://Scenes/InteractableObjects/Sign.tscn" type="PackedScene" id=12]

[sub_resource type="CapsuleShape2D" id=38]
radius = 53.1063
height = 152.0

[node name="Sea" type="Node2D"]
script = ExtResource( 10 )

[node name="TextureRect_Background" parent="." instance=ExtResource( 2 )]
margin_left = -34.0
margin_top = -45.0
margin_right = 757.0
margin_bottom = 610.0

[node name="GroundTileMap" parent="." instance=ExtResource( 8 )]
tile_data = PoolIntArray( 524309, 0, 1, 524310, 0, 2, 524311, 0, 3, 524321, 1, 0, 589836, 1, 1, 589837, 1, 2, 589838, 1, 2, 589839, 1, 2, 589840, 1, 2, 589841, 1, 2, 589842, 1, 2, 589843, 1, 3, 589845, 0, 65537, 589846, 0, 65538, 589847, 0, 65539, 589848, 1, 1, 589849, 1, 2, 589850, 1, 2, 589851, 1, 2, 589852, 1, 2, 589853, 1, 2, 589854, 1, 2, 589855, 1, 2, 589856, 1, 2, 589857, 1, 196608, 655368, 1, 1, 655369, 1, 2, 655370, 1, 2, 655371, 1, 2, 655372, 1, 65541, 655373, 1, 65538, 655374, 1, 65538, 655375, 1, 65538, 655376, 1, 65538, 655377, 1, 65538, 655378, 1, 65538, 655379, 1, 65539, 655381, 0, 65537, 655382, 0, 65538, 655383, 0, 65539, 655384, 1, 65537, 655385, 1, 65538, 655386, 1, 65538, 655387, 1, 65538, 655388, 1, 65538, 655389, 1, 65538, 655390, 1, 65538, 655391, 1, 65538, 655392, 1, 65538, 655393, 1, 65540, 655394, 1, 3, 720904, 1, 65537, 720905, 1, 65538, 720906, 1, 65538, 720907, 1, 65538, 720908, 1, 65538, 720909, 1, 65538, 720910, 1, 65538, 720911, 1, 65538, 720912, 1, 65538, 720913, 1, 65538, 720914, 1, 65538, 720915, 1, 65539, 720917, 0, 65537, 720918, 0, 65538, 720919, 0, 65539, 720920, 1, 65537, 720921, 1, 65538, 720922, 1, 65538, 720923, 1, 65538, 720924, 1, 65538, 720925, 1, 65538, 720926, 1, 65538, 720927, 1, 65538, 720928, 1, 65538, 720929, 1, 65538, 720930, 1, 65539, 786438, 1, 1, 786439, 1, 2, 786440, 1, 65541, 786441, 1, 65538, 786442, 1, 65538, 786443, 1, 65538, 786444, 1, 65538, 786445, 1, 65538, 786446, 1, 65538, 786447, 1, 65538, 786448, 1, 65538, 786449, 1, 65538, 786450, 1, 65538, 786451, 1, 65539, 786453, 0, 65537, 786454, 0, 65538, 786455, 0, 65539, 786456, 1, 131073, 786457, 1, 5, 786458, 1, 65538, 786459, 1, 65538, 786460, 1, 65538, 786461, 1, 65538, 786462, 1, 65538, 786463, 1, 65538, 786464, 1, 65538, 786465, 1, 65538, 786466, 1, 65539, 851968, 1, 1, 851969, 1, 2, 851970, 1, 2, 851971, 1, 2, 851972, 1, 2, 851973, 1, 2, 851974, 1, 65541, 851975, 1, 65538, 851976, 1, 65538, 851977, 1, 65538, 851978, 1, 65538, 851979, 1, 65538, 851980, 1, 65538, 851981, 1, 65538, 851982, 1, 65538, 851983, 1, 65538, 851984, 1, 65538, 851985, 1, 65538, 851986, 1, 65538, 851987, 1, 65539, 851989, 0, 65537, 851990, 0, 65538, 851991, 0, 65539, 851993, 1, 65537, 851994, 1, 65538, 851995, 1, 65538, 851996, 1, 65538, 851997, 1, 65538, 851998, 1, 65538, 851999, 1, 65538, 852000, 1, 65538, 852001, 1, 65538, 852002, 1, 65540, 852003, 1, 2, 852004, 1, 2, 852005, 1, 2, 852006, 1, 2, 852007, 1, 2, 852008, 1, 2, 852009, 1, 3, 917504, 1, 65537, 917505, 1, 65538, 917506, 1, 65538, 917507, 1, 65538, 917508, 1, 65538, 917509, 1, 65538, 917510, 1, 65538, 917511, 1, 65538, 917512, 1, 65538, 917513, 1, 65538, 917514, 1, 65538, 917515, 1, 65538, 917516, 1, 65538, 917517, 1, 65538, 917518, 1, 65538, 917519, 1, 65538, 917520, 1, 65538, 917521, 1, 65538, 917522, 1, 65538, 917523, 1, 65539, 917525, 0, 65537, 917526, 0, 65538, 917527, 0, 65539, 917529, 1, 131073, 917530, 1, 131074, 917531, 1, 131074, 917532, 1, 131074, 917533, 1, 131074, 917534, 1, 131074, 917535, 1, 131074, 917536, 1, 131074, 917537, 1, 131074, 917538, 1, 131074, 917539, 1, 131074, 917540, 1, 131074, 917541, 1, 5, 917542, 1, 65538, 917543, 1, 65538, 917544, 1, 65538, 917545, 1, 65540, 917546, 1, 2, 917547, 1, 3, 983040, 1, 65537, 983041, 1, 65538, 983042, 1, 65538, 983043, 1, 65538, 983044, 1, 65538, 983045, 1, 65538, 983046, 1, 65538, 983047, 1, 65538, 983048, 1, 65538, 983049, 1, 65538, 983050, 1, 65538, 983051, 1, 65538, 983052, 1, 65538, 983053, 1, 65538, 983054, 1, 65538, 983055, 1, 65538, 983056, 1, 65538, 983057, 1, 65538, 983058, 1, 65538, 983059, 1, 65539, 983061, 0, 65537, 983062, 0, 65538, 983063, 0, 65539, 983072, 2, 1, 983073, 2, 2, 983074, 2, 2, 983075, 2, 3, 983077, 1, 65537, 983078, 1, 65538, 983079, 1, 65538, 983080, 1, 65538, 983081, 1, 65538, 983082, 1, 65538, 983083, 1, 65539, 1048576, 1, 65537, 1048577, 1, 65538, 1048578, 1, 65538, 1048579, 1, 65538, 1048580, 1, 65538, 1048581, 1, 65538, 1048582, 1, 65538, 1048583, 1, 65538, 1048584, 1, 65538, 1048585, 1, 65538, 1048586, 1, 65538, 1048587, 1, 65538, 1048588, 1, 65538, 1048589, 1, 65538, 1048590, 1, 65538, 1048591, 1, 65538, 1048592, 1, 65538, 1048593, 1, 65538, 1048594, 1, 65538, 1048595, 1, 65540, 1048596, 1, 3, 1048597, 0, 65537, 1048598, 0, 65538, 1048599, 0, 65539, 1048608, 2, 65537, 1048609, 2, 65538, 1048610, 2, 65538, 1048611, 2, 65539, 1048613, 1, 65537, 1048614, 1, 65538, 1048615, 1, 65538, 1048616, 1, 65538, 1048617, 1, 65538, 1048618, 1, 65538, 1048619, 1, 65540, 1048620, 1, 2, 1048621, 1, 2, 1048622, 1, 3, 1114112, 1, 131073, 1114113, 1, 131074, 1114114, 1, 131074, 1114115, 1, 131074, 1114116, 1, 131074, 1114117, 1, 131074, 1114118, 1, 131074, 1114119, 1, 131074, 1114120, 1, 131074, 1114121, 1, 5, 1114122, 1, 65538, 1114123, 1, 65538, 1114124, 1, 65538, 1114125, 1, 65538, 1114126, 1, 65538, 1114127, 1, 65538, 1114128, 1, 65538, 1114129, 1, 65538, 1114130, 1, 65538, 1114131, 1, 65538, 1114132, 1, 65539, 1114133, 0, 65537, 1114134, 0, 65538, 1114135, 0, 65539, 1114144, 2, 65537, 1114145, 2, 65538, 1114146, 2, 65538, 1114147, 2, 65539, 1114148, 1, 1, 1114149, 1, 65541, 1114150, 1, 65538, 1114151, 1, 65538, 1114152, 1, 65538, 1114153, 1, 65538, 1114154, 1, 65538, 1114155, 1, 65538, 1114156, 1, 65538, 1114157, 1, 65538, 1114158, 1, 65539, 1179657, 1, 131073, 1179658, 1, 131074, 1179659, 1, 5, 1179660, 1, 65538, 1179661, 1, 65538, 1179662, 1, 65538, 1179663, 1, 4, 1179664, 1, 131074, 1179665, 1, 131074, 1179666, 1, 131074, 1179667, 1, 131074, 1179668, 1, 131075, 1179669, 0, 65537, 1179670, 0, 4, 1179671, 0, 131075, 1179680, 2, 131073, 1179681, 2, 131074, 1179682, 2, 131074, 1179683, 2, 131075, 1179684, 1, 65537, 1179685, 1, 65538, 1179686, 1, 65538, 1179687, 1, 65538, 1179688, 1, 65538, 1179689, 1, 65538, 1179690, 1, 65538, 1179691, 1, 65538, 1179692, 1, 65538, 1179693, 1, 65538, 1179694, 1, 65539, 1245195, 1, 131073, 1245196, 1, 5, 1245197, 1, 65538, 1245198, 1, 65538, 1245199, 1, 65539, 1245200, 2, 1, 1245201, 2, 2, 1245202, 2, 3, 1245205, 0, 65537, 1245206, 0, 65539, 1245218, 1, 1, 1245219, 1, 2, 1245220, 1, 65541, 1245221, 1, 65538, 1245222, 1, 65538, 1245223, 1, 65538, 1245224, 1, 65538, 1245225, 1, 65538, 1245226, 1, 65538, 1245227, 1, 65538, 1245228, 1, 65538, 1245229, 1, 65538, 1245230, 1, 65539, 1310732, 1, 65537, 1310733, 1, 65538, 1310734, 1, 4, 1310735, 1, 131075, 1310736, 2, 65537, 1310737, 2, 65538, 1310738, 2, 65539, 1310741, 0, 65537, 1310742, 0, 65539, 1310752, 1, 1, 1310753, 1, 2, 1310754, 1, 65541, 1310755, 1, 65538, 1310756, 1, 65538, 1310757, 1, 65538, 1310758, 1, 65538, 1310759, 1, 65538, 1310760, 1, 65538, 1310761, 1, 65538, 1310762, 1, 65538, 1310763, 1, 65538, 1310764, 1, 65538, 1310765, 1, 65538, 1310766, 1, 65539, 1376268, 1, 131073, 1376269, 1, 5, 1376270, 1, 65539, 1376272, 2, 65537, 1376273, 2, 65538, 1376274, 2, 65539, 1376277, 0, 131073, 1376278, 0, 131079, 1376282, 2, 1, 1376283, 2, 3, 1376287, 1, 1, 1376288, 1, 65541, 1376289, 1, 65538, 1376290, 1, 65538, 1376291, 1, 65538, 1376292, 1, 4, 1376293, 1, 131074, 1376294, 1, 131074, 1376295, 1, 131074, 1376296, 1, 131074, 1376297, 1, 131074, 1376298, 1, 131074, 1376299, 1, 131074, 1376300, 1, 131074, 1376301, 1, 5, 1376302, 1, 65539, 1441805, 1, 65537, 1441806, 1, 65539, 1441808, 2, 131073, 1441809, 2, 131074, 1441810, 2, 131075, 1441814, 0, 65536, 1441818, 2, 65537, 1441819, 2, 65539, 1441822, 1, 1, 1441823, 1, 65541, 1441824, 1, 4, 1441825, 1, 131074, 1441826, 1, 131074, 1441827, 1, 131074, 1441828, 1, 131075, 1441837, 1, 131073, 1441838, 1, 131075, 1507341, 1, 131073, 1507342, 1, 131077, 1507343, 1, 2, 1507344, 1, 3, 1507349, 0, 1, 1507350, 0, 196615, 1507354, 2, 131073, 1507355, 2, 131075, 1507358, 1, 131073, 1507359, 1, 131074, 1507360, 1, 131075, 1572878, 1, 65537, 1572879, 1, 65538, 1572880, 1, 65540, 1572881, 1, 3, 1572885, 0, 65537, 1572886, 0, 65539, 1638414, 1, 131073, 1638415, 1, 5, 1638416, 1, 65538, 1638417, 1, 65540, 1638418, 1, 3, 1638421, 0, 65537, 1638422, 0, 65540, 1638423, 0, 2, 1638424, 0, 3, 1703951, 1, 131073, 1703952, 1, 131074, 1703953, 1, 5, 1703954, 1, 65540, 1703955, 1, 3, 1703957, 0, 131073, 1703958, 0, 131074, 1703959, 0, 131074, 1703960, 0, 65542, 1703961, 0, 196611, 1769489, 1, 131073, 1769490, 1, 131074, 1769491, 1, 131075, 2031639, 0, 0, 2097175, 0, 131072 )

[node name="WaterTileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 1179649, 0, 0, 1179650, 0, 1, 1179651, 0, 1, 1179652, 0, 1, 1179653, 0, 1, 1179654, 0, 1, 1179655, 0, 1, 1179656, 0, 2, 1245185, 0, 65536, 1245186, 0, 65537, 1245187, 0, 65537, 1245188, 0, 65537, 1245189, 0, 65537, 1245190, 0, 65537, 1245191, 0, 65537, 1245192, 0, 65539, 1245193, 0, 1, 1245194, 0, 2, 1310721, 0, 65536, 1310722, 0, 65537, 1310723, 0, 65537, 1310724, 0, 65537, 1310725, 0, 65537, 1310726, 0, 65537, 1310727, 0, 65537, 1310728, 0, 65537, 1310729, 0, 65537, 1310730, 0, 65539, 1310731, 0, 2, 1376257, 0, 65536, 1376258, 0, 65537, 1376259, 0, 65537, 1376260, 0, 65537, 1376261, 0, 65537, 1376262, 0, 65537, 1376263, 0, 65537, 1376264, 0, 65537, 1376265, 0, 65537, 1376266, 0, 65537, 1376267, 0, 65538, 1441793, 0, 65536, 1441794, 0, 65537, 1441795, 0, 65537, 1441796, 0, 65537, 1441797, 0, 65537, 1441798, 0, 65537, 1441799, 0, 65537, 1441800, 0, 65537, 1441801, 0, 65537, 1441802, 0, 65537, 1441803, 0, 65539, 1441804, 0, 2, 1441829, 0, 0, 1441830, 0, 1, 1441831, 0, 1, 1441832, 0, 1, 1441833, 0, 1, 1441834, 0, 1, 1441835, 0, 1, 1441836, 0, 2, 1507329, 0, 65536, 1507330, 0, 65537, 1507331, 0, 65537, 1507332, 0, 65537, 1507333, 0, 65537, 1507334, 0, 65537, 1507335, 0, 65537, 1507336, 0, 65537, 1507337, 0, 65537, 1507338, 0, 65537, 1507339, 0, 65537, 1507340, 0, 65538, 1507361, 0, 0, 1507362, 0, 1, 1507363, 0, 1, 1507364, 0, 1, 1507365, 0, 65540, 1507366, 0, 65537, 1507367, 0, 65537, 1507368, 0, 65537, 1507369, 0, 65537, 1507370, 0, 65537, 1507371, 0, 65537, 1507372, 0, 65539, 1507373, 0, 2, 1572865, 0, 65536, 1572866, 0, 65537, 1572867, 0, 65537, 1572868, 0, 65537, 1572869, 0, 65537, 1572870, 0, 65537, 1572871, 0, 65537, 1572872, 0, 65537, 1572873, 0, 65537, 1572874, 0, 65537, 1572875, 0, 65537, 1572876, 0, 65539, 1572877, 0, 2, 1572895, 0, 0, 1572896, 0, 1, 1572897, 0, 65540, 1572898, 0, 65537, 1572899, 0, 65537, 1572900, 0, 65537, 1572901, 0, 65537, 1572902, 0, 65537, 1572903, 0, 65537, 1572904, 0, 65537, 1572905, 0, 65537, 1572906, 0, 65537, 1572907, 0, 65537, 1572908, 0, 65537, 1572909, 0, 65538, 1638401, 0, 65536, 1638402, 0, 65537, 1638403, 0, 65537, 1638404, 0, 65537, 1638405, 0, 65537, 1638406, 0, 65537, 1638407, 0, 65537, 1638408, 0, 65537, 1638409, 0, 65537, 1638410, 0, 65537, 1638411, 0, 65537, 1638412, 0, 65537, 1638413, 0, 65538, 1638430, 0, 0, 1638431, 0, 65540, 1638432, 0, 65537, 1638433, 0, 65537, 1638434, 0, 65537, 1638435, 0, 65537, 1638436, 0, 65537, 1638437, 0, 65537, 1638438, 0, 65537, 1638439, 0, 65537, 1638440, 0, 65537, 1638441, 0, 65537, 1638442, 0, 65537, 1638443, 0, 65537, 1638444, 0, 65537, 1638445, 0, 65538, 1703937, 0, 65536, 1703938, 0, 65537, 1703939, 0, 65537, 1703940, 0, 65537, 1703941, 0, 65537, 1703942, 0, 65537, 1703943, 0, 65537, 1703944, 0, 65537, 1703945, 0, 65537, 1703946, 0, 65537, 1703947, 0, 65537, 1703948, 0, 65537, 1703949, 0, 65539, 1703950, 0, 2, 1703964, 0, 0, 1703965, 0, 1, 1703966, 0, 65540, 1703967, 0, 65537, 1703968, 0, 65537, 1703969, 0, 65537, 1703970, 0, 65537, 1703971, 0, 65537, 1703972, 0, 65537, 1703973, 0, 65537, 1703974, 0, 65537, 1703975, 0, 65537, 1703976, 0, 65537, 1703977, 0, 65537, 1703978, 0, 65537, 1703979, 0, 65537, 1703980, 0, 65537, 1703981, 0, 65538, 1769473, 0, 65536, 1769474, 0, 65537, 1769475, 0, 65537, 1769476, 0, 65537, 1769477, 0, 65537, 1769478, 0, 65537, 1769479, 0, 65537, 1769480, 0, 65537, 1769481, 0, 65537, 1769482, 0, 65537, 1769483, 0, 65537, 1769484, 0, 65537, 1769485, 0, 65537, 1769486, 0, 65539, 1769487, 0, 1, 1769488, 0, 2, 1769499, 0, 0, 1769500, 0, 65540, 1769501, 0, 65537, 1769502, 0, 65537, 1769503, 0, 65537, 1769504, 0, 65537, 1769505, 0, 65537, 1769506, 0, 65537, 1769507, 0, 65537, 1769508, 0, 65537, 1769509, 0, 65537, 1769510, 0, 65537, 1769511, 0, 65537, 1769512, 0, 65537, 1769513, 0, 65537, 1769514, 0, 65537, 1769515, 0, 65537, 1769516, 0, 65537, 1769517, 0, 65538, 1835009, 0, 65536, 1835010, 0, 65537, 1835011, 0, 65537, 1835012, 0, 65537, 1835013, 0, 65537, 1835014, 0, 65537, 1835015, 0, 65537, 1835016, 0, 65537, 1835017, 0, 65537, 1835018, 0, 65537, 1835019, 0, 65537, 1835020, 0, 65537, 1835021, 0, 65537, 1835022, 0, 65537, 1835023, 0, 65537, 1835024, 0, 65539, 1835025, 0, 1, 1835026, 0, 1, 1835027, 0, 1, 1835028, 0, 1, 1835029, 0, 2, 1835034, 0, 0, 1835035, 0, 65540, 1835036, 0, 65537, 1835037, 0, 65537, 1835038, 0, 65537, 1835039, 0, 65537, 1835040, 0, 65537, 1835041, 0, 65537, 1835042, 0, 65537, 1835043, 0, 65537, 1835044, 0, 65537, 1835045, 0, 65537, 1835046, 0, 65537, 1835047, 0, 65537, 1835048, 0, 65537, 1835049, 0, 65537, 1835050, 0, 65537, 1835051, 0, 65537, 1835052, 0, 65537, 1835053, 0, 65538, 1900545, 0, 65536, 1900546, 0, 65537, 1900547, 0, 65537, 1900548, 0, 65537, 1900549, 0, 65537, 1900550, 0, 65537, 1900551, 0, 65537, 1900552, 0, 65537, 1900553, 0, 65537, 1900554, 0, 65537, 1900555, 0, 65537, 1900556, 0, 65537, 1900557, 0, 65537, 1900558, 0, 65537, 1900559, 0, 65537, 1900560, 0, 65537, 1900561, 0, 65537, 1900562, 0, 65537, 1900563, 0, 65537, 1900564, 0, 65537, 1900565, 0, 65539, 1900566, 0, 2, 1900570, 0, 65536, 1900571, 0, 65537, 1900572, 0, 65537, 1900573, 0, 65537, 1900574, 0, 65537, 1900575, 0, 65537, 1900576, 0, 65537, 1900577, 0, 65537, 1900578, 0, 65537, 1900579, 0, 65537, 1900580, 0, 65537, 1900581, 0, 65537, 1900582, 0, 65537, 1900583, 0, 65537, 1900584, 0, 65537, 1900585, 0, 65537, 1900586, 0, 65537, 1900587, 0, 65537, 1900588, 0, 65537, 1900589, 0, 65538, 1966081, 0, 65536, 1966082, 0, 65537, 1966083, 0, 65537, 1966084, 0, 65537, 1966085, 0, 65537, 1966086, 0, 65537, 1966087, 0, 65537, 1966088, 0, 65537, 1966089, 0, 65537, 1966090, 0, 65537, 1966091, 0, 65537, 1966092, 0, 65537, 1966093, 0, 65537, 1966094, 0, 65537, 1966095, 0, 65537, 1966096, 0, 65537, 1966097, 0, 65537, 1966098, 0, 65537, 1966099, 0, 65537, 1966100, 0, 65537, 1966101, 0, 65537, 1966102, 0, 65538, 1966106, 0, 65536, 1966107, 0, 65537, 1966108, 0, 65537, 1966109, 0, 65537, 1966110, 0, 65537, 1966111, 0, 65537, 1966112, 0, 65537, 1966113, 0, 65537, 1966114, 0, 65537, 1966115, 0, 65537, 1966116, 0, 65537, 1966117, 0, 65537, 1966118, 0, 65537, 1966119, 0, 65537, 1966120, 0, 65537, 1966121, 0, 65537, 1966122, 0, 65537, 1966123, 0, 65537, 1966124, 0, 65537, 1966125, 0, 65538, 2031617, 0, 65536, 2031618, 0, 65537, 2031619, 0, 65537, 2031620, 0, 65537, 2031621, 0, 65537, 2031622, 0, 65537, 2031623, 0, 65537, 2031624, 0, 65537, 2031625, 0, 65537, 2031626, 0, 65537, 2031627, 0, 65537, 2031628, 0, 65537, 2031629, 0, 65537, 2031630, 0, 65537, 2031631, 0, 65537, 2031632, 0, 65537, 2031633, 0, 65537, 2031634, 0, 65537, 2031635, 0, 65537, 2031636, 0, 65537, 2031637, 0, 65537, 2031638, 0, 65539, 2031639, 0, 2, 2031642, 0, 65536, 2031643, 0, 65537, 2031644, 0, 65537, 2031645, 0, 65537, 2031646, 0, 65537, 2031647, 0, 65537, 2031648, 0, 65537, 2031649, 0, 65537, 2031650, 0, 65537, 2031651, 0, 65537, 2031652, 0, 65537, 2031653, 0, 65537, 2031654, 0, 65537, 2031655, 0, 65537, 2031656, 0, 65537, 2031657, 0, 65537, 2031658, 0, 65537, 2031659, 0, 65537, 2031660, 0, 65537, 2031661, 0, 65538, 2097153, 0, 65536, 2097154, 0, 65537, 2097155, 0, 65537, 2097156, 0, 65537, 2097157, 0, 65537, 2097158, 0, 65537, 2097159, 0, 65537, 2097160, 0, 65537, 2097161, 0, 65537, 2097162, 0, 65537, 2097163, 0, 65537, 2097164, 0, 65537, 2097165, 0, 65537, 2097166, 0, 65537, 2097167, 0, 65537, 2097168, 0, 65537, 2097169, 0, 65537, 2097170, 0, 65537, 2097171, 0, 65537, 2097172, 0, 65537, 2097173, 0, 65537, 2097174, 0, 65537, 2097175, 0, 65538, 2097177, 0, 0, 2097178, 0, 65540, 2097179, 0, 65537, 2097180, 0, 65537, 2097181, 0, 65537, 2097182, 0, 65537, 2097183, 0, 65537, 2097184, 0, 65537, 2097185, 0, 65537, 2097186, 0, 65537, 2097187, 0, 65537, 2097188, 0, 65537, 2097189, 0, 65537, 2097190, 0, 65537, 2097191, 0, 65537, 2097192, 0, 65537, 2097193, 0, 65537, 2097194, 0, 65537, 2097195, 0, 65537, 2097196, 0, 65537, 2097197, 0, 65538, 2162689, 0, 65536, 2162690, 0, 65537, 2162691, 0, 65537, 2162692, 0, 65537, 2162693, 0, 65537, 2162694, 0, 65537, 2162695, 0, 65537, 2162696, 0, 65537, 2162697, 0, 65537, 2162698, 0, 65537, 2162699, 0, 65537, 2162700, 0, 65537, 2162701, 0, 65537, 2162702, 0, 65537, 2162703, 0, 65537, 2162704, 0, 65537, 2162705, 0, 65537, 2162706, 0, 65537, 2162707, 0, 65537, 2162708, 0, 65537, 2162709, 0, 65537, 2162710, 0, 65537, 2162711, 0, 65539, 2162712, 0, 1, 2162713, 0, 65540, 2162714, 0, 65537, 2162715, 0, 65537, 2162716, 0, 65537, 2162717, 0, 65537, 2162718, 0, 65537, 2162719, 0, 65537, 2162720, 0, 65537, 2162721, 0, 65537, 2162722, 0, 65537, 2162723, 0, 65537, 2162724, 0, 65537, 2162725, 0, 65537, 2162726, 0, 65537, 2162727, 0, 65537, 2162728, 0, 65537, 2162729, 0, 65537, 2162730, 0, 65537, 2162731, 0, 65537, 2162732, 0, 65537, 2162733, 0, 65538, 2228225, 0, 131072, 2228226, 0, 4, 2228227, 0, 65537, 2228228, 0, 65537, 2228229, 0, 65537, 2228230, 0, 65537, 2228231, 0, 65537, 2228232, 0, 65537, 2228233, 0, 65537, 2228234, 0, 65537, 2228235, 0, 65537, 2228236, 0, 65537, 2228237, 0, 65537, 2228238, 0, 65537, 2228239, 0, 65537, 2228240, 0, 65537, 2228241, 0, 65537, 2228242, 0, 65537, 2228243, 0, 65537, 2228244, 0, 65537, 2228245, 0, 65537, 2228246, 0, 65537, 2228247, 0, 65537, 2228248, 0, 65537, 2228249, 0, 65537, 2228250, 0, 65537, 2228251, 0, 65537, 2228252, 0, 65537, 2228253, 0, 65537, 2228254, 0, 65537, 2228255, 0, 65537, 2228256, 0, 65537, 2228257, 0, 65537, 2228258, 0, 65537, 2228259, 0, 65537, 2228260, 0, 65537, 2228261, 0, 65537, 2228262, 0, 65537, 2228263, 0, 65537, 2228264, 0, 65537, 2228265, 0, 65537, 2228266, 0, 65537, 2228267, 0, 65537, 2228268, 0, 65537, 2228269, 0, 65538, 2293762, 0, 65536, 2293763, 0, 65537, 2293764, 0, 65537, 2293765, 0, 65537, 2293766, 0, 65537, 2293767, 0, 65537, 2293768, 0, 65537, 2293769, 0, 65537, 2293770, 0, 65537, 2293771, 0, 65537, 2293772, 0, 65537, 2293773, 0, 65537, 2293774, 0, 65537, 2293775, 0, 65537, 2293776, 0, 65537, 2293777, 0, 65537, 2293778, 0, 65537, 2293779, 0, 65537, 2293780, 0, 65537, 2293781, 0, 65537, 2293782, 0, 65537, 2293783, 0, 65537, 2293784, 0, 65537, 2293785, 0, 65537, 2293786, 0, 65537, 2293787, 0, 65537, 2293788, 0, 65537, 2293789, 0, 65537, 2293790, 0, 65537, 2293791, 0, 65537, 2293792, 0, 65537, 2293793, 0, 65537, 2293794, 0, 65537, 2293795, 0, 65537, 2293796, 0, 65537, 2293797, 0, 65537, 2293798, 0, 65537, 2293799, 0, 65537, 2293800, 0, 65537, 2293801, 0, 65537, 2293802, 0, 65537, 2293803, 0, 65537, 2293804, 0, 65537, 2293805, 0, 65538, 2359297, 0, 0, 2359298, 0, 65540, 2359299, 0, 65537, 2359300, 0, 65537, 2359301, 0, 65537, 2359302, 0, 65537, 2359303, 0, 65537, 2359304, 0, 65537, 2359305, 0, 65537, 2359306, 0, 65537, 2359307, 0, 65537, 2359308, 0, 65537, 2359309, 0, 65537, 2359310, 0, 65537, 2359311, 0, 65537, 2359312, 0, 65537, 2359313, 0, 65537, 2359314, 0, 65537, 2359315, 0, 65537, 2359316, 0, 65537, 2359317, 0, 65537, 2359318, 0, 65537, 2359319, 0, 65537, 2359320, 0, 65537, 2359321, 0, 65537, 2359322, 0, 65537, 2359323, 0, 65537, 2359324, 0, 65537, 2359325, 0, 65537, 2359326, 0, 65537, 2359327, 0, 65537, 2359328, 0, 65537, 2359329, 0, 65537, 2359330, 0, 65537, 2359331, 0, 65537, 2359332, 0, 65537, 2359333, 0, 65537, 2359334, 0, 65537, 2359335, 0, 65537, 2359336, 0, 65537, 2359337, 0, 65537, 2359338, 0, 65537, 2359339, 0, 65537, 2359340, 0, 65537, 2359341, 0, 65538, 2424833, 0, 131072, 2424834, 0, 4, 2424835, 0, 65537, 2424836, 0, 65537, 2424837, 0, 65537, 2424838, 0, 65537, 2424839, 0, 65537, 2424840, 0, 65537, 2424841, 0, 65537, 2424842, 0, 65537, 2424843, 0, 65537, 2424844, 0, 65537, 2424845, 0, 65537, 2424846, 0, 65537, 2424847, 0, 65537, 2424848, 0, 65537, 2424849, 0, 65537, 2424850, 0, 65537, 2424851, 0, 65537, 2424852, 0, 65537, 2424853, 0, 65537, 2424854, 0, 65537, 2424855, 0, 65537, 2424856, 0, 65537, 2424857, 0, 65537, 2424858, 0, 65537, 2424859, 0, 65537, 2424860, 0, 65537, 2424861, 0, 65537, 2424862, 0, 65537, 2424863, 0, 65537, 2424864, 0, 65537, 2424865, 0, 65537, 2424866, 0, 65537, 2424867, 0, 65537, 2424868, 0, 65537, 2424869, 0, 65537, 2424870, 0, 65537, 2424871, 0, 65537, 2424872, 0, 65537, 2424873, 0, 65537, 2424874, 0, 65537, 2424875, 0, 65537, 2424876, 0, 65537, 2424877, 0, 65538, 2490370, 0, 65536, 2490371, 0, 65537, 2490372, 0, 65537, 2490373, 0, 65537, 2490374, 0, 65537, 2490375, 0, 65537, 2490376, 0, 65537, 2490377, 0, 65537, 2490378, 0, 65537, 2490379, 0, 65537, 2490380, 0, 65537, 2490381, 0, 65537, 2490382, 0, 65537, 2490383, 0, 65537, 2490384, 0, 65537, 2490385, 0, 65537, 2490386, 0, 65537, 2490387, 0, 65537, 2490388, 0, 65537, 2490389, 0, 65537, 2490390, 0, 65537, 2490391, 0, 65537, 2490392, 0, 65537, 2490393, 0, 65537, 2490394, 0, 65537, 2490395, 0, 65537, 2490396, 0, 65537, 2490397, 0, 65537, 2490398, 0, 65537, 2490399, 0, 65537, 2490400, 0, 65537, 2490401, 0, 65537, 2490402, 0, 65537, 2490403, 0, 65537, 2490404, 0, 65537, 2490405, 0, 65537, 2490406, 0, 65537, 2490407, 0, 65537, 2490408, 0, 65537, 2490409, 0, 65537, 2490410, 0, 65537, 2490411, 0, 65537, 2490412, 0, 65537, 2490413, 0, 65538, 2555906, 0, 65536, 2555907, 0, 65537, 2555908, 0, 65537, 2555909, 0, 65537, 2555910, 0, 65537, 2555911, 0, 65537, 2555912, 0, 65537, 2555913, 0, 65537, 2555914, 0, 65537, 2555915, 0, 65537, 2555916, 0, 65537, 2555917, 0, 65537, 2555918, 0, 65537, 2555919, 0, 65537, 2555920, 0, 65537, 2555921, 0, 65537, 2555922, 0, 65537, 2555923, 0, 65537, 2555924, 0, 65537, 2555925, 0, 65537, 2555926, 0, 65537, 2555927, 0, 65537, 2555928, 0, 65537, 2555929, 0, 65537, 2555930, 0, 65537, 2555931, 0, 65537, 2555932, 0, 65537, 2555933, 0, 65537, 2555934, 0, 65537, 2555935, 0, 65537, 2555936, 0, 65537, 2555937, 0, 65537, 2555938, 0, 65537, 2555939, 0, 65537, 2555940, 0, 65537, 2555941, 0, 65537, 2555942, 0, 65537, 2555943, 0, 65537, 2555944, 0, 65537, 2555945, 0, 65537, 2555946, 0, 65537, 2555947, 0, 65537, 2555948, 0, 3, 2555949, 0, 131074, 2621442, 0, 131072, 2621443, 0, 131073, 2621444, 0, 131073, 2621445, 0, 131073, 2621446, 0, 131073, 2621447, 0, 131073, 2621448, 0, 131073, 2621449, 0, 131073, 2621450, 0, 131073, 2621451, 0, 131073, 2621452, 0, 131073, 2621453, 0, 131073, 2621454, 0, 131073, 2621455, 0, 131073, 2621456, 0, 131073, 2621457, 0, 131073, 2621458, 0, 131073, 2621459, 0, 131073, 2621460, 0, 131073, 2621461, 0, 131073, 2621462, 0, 131073, 2621463, 0, 131073, 2621464, 0, 131073, 2621465, 0, 131073, 2621466, 0, 131073, 2621467, 0, 131073, 2621468, 0, 131073, 2621469, 0, 131073, 2621470, 0, 131073, 2621471, 0, 131073, 2621472, 0, 131073, 2621473, 0, 131073, 2621474, 0, 131073, 2621475, 0, 131073, 2621476, 0, 131073, 2621477, 0, 131073, 2621478, 0, 131073, 2621479, 0, 131073, 2621480, 0, 131073, 2621481, 0, 131073, 2621482, 0, 131073, 2621483, 0, 131073, 2621484, 0, 131074 )

[node name="DecorationsTileMap" parent="." instance=ExtResource( 9 )]
tile_data = PoolIntArray( 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 983068, 0, 0, 1245204, 0, 65537, 1376280, 0, 196609, 1441812, 0, 196609, 1441821, 0, 196608, 1507351, 0, 0, 1507352, 0, 0 )

[node name="ObjectsTileMap" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( 720909, 0, 1, 720940, 0, 1, 983067, 0, 589824, 983068, 0, 589825, 983069, 0, 589826, 1048603, 0, 655360, 1048604, 0, 655361, 1048605, 0, 655362, 1114139, 0, 720896, 1114140, 0, 720897, 1114141, 0, 720898, 1179675, 0, 786432, 1179676, 0, 786433, 1179677, 0, 786434, 1310749, 0, 0, 1572890, 0, 393222, 1572891, 0, 393223, 1638419, 0, 65536, 1703963, 0, 3, 2293787, 0, 1, 2490386, 0, 1 )

[node name="AnimatedRockTileMap" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( 1769503, 0, 0, 1900571, 0, 0, 1966097, 0, 0, 1966098, 0, 0, 1966111, 0, 0 )

[node name="FenceTileMap" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 0 )
tile_data = PoolIntArray( 983065, 0, 0, 983071, 0, 0, 1048601, 0, 65536, 1048607, 0, 65536, 1114137, 0, 65536, 1114143, 0, 65536, 1179673, 0, 131072, 1179679, 0, 131072, 1245203, 0, 0, 1245210, 0, 196609, 1245211, 0, 196610, 1245212, 0, 196610, 1245213, 0, 196610, 1245214, 0, 196611, 1245216, 0, 196609, 1245217, 0, 196611, 1310739, 0, 65536, 1376275, 0, 65536, 1441811, 0, 65536, 1507347, 0, 65536, 1572883, 0, 131072 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 383, 473 )
current = true
process_mode = 0
smoothing_enabled = true

[node name="TownArea2D" type="Area2D" parent="."]
position = Vector2( 374, 112 )
rotation = 1.5708
scale = Vector2( 0.998, 1 )
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="TownArea2D"]
position = Vector2( 40.0802, 5 )
shape = SubResource( 38 )

[node name="fromTown" type="Position2D" parent="."]
position = Vector2( 361, 223 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 383, 474 )
z_index = 0

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/Player"]
position = Vector2( 0, -1 )
remote_path = NodePath("../../../Camera2D")

[node name="Doug" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 350, 412 )

[node name="Sign" parent="YSort" instance=ExtResource( 12 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 11 )
volume_db = -6.0
autoplay = true

[connection signal="area_entered" from="TownArea2D" to="." method="_on_TownArea2D_area_entered"]
